fixed the spacing of the features hover

--- a/intro-section-with-dropdown-navigation-main/remake.css
+++ b/intro-section-with-dropdown-navigation-main/remake.css
@@ -23,7 +23,7 @@
 .topnav {
     height: 60px;
     padding: 10px;
-    font-weight: 550;
+    font-weight: 500;
 }
 
 .topnav a {
@@ -170,11 +170,12 @@ transition: all 0.2s ease;
     border-radius: 15px;
     justify-content: center;
     text-align: center;
-    padding: 10px;
 }    
 
 #features:hover ul li {
     display: block;
+    font-size: 12px;
+    height: 55px;
 }    
 
 
